fix: create directory if it does not exist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
 		"outDir": "dist",
 		"rootDir": "src",
 		"strictNullChecks": true,
-		"noImplicitAny": true
+		"noImplicitAny": true,
+		// need to manually add these, because parcel will complain otherwise
+		"types": ["node", "jest"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
